--- a/Web Application/Wordle Spring/src/main/resources/templates/not-found.html
+++ b/Web Application/Wordle Spring/src/main/resources/templates/not-found.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Entity not found</title>
-    <link href="../static/styles.css" th:href="@{/styles.css}" rel="stylesheet"/> pyrvi link za preview
-    vtori link za runtime, ima razlika pri dostypvane na css stila pri lqvo i dqsno link vzemane
+    <link href="../static/styles.css" th:href="@{/styles.css}" rel="stylesheet"/>
 </head>
 <body>
-<h2 th:text="#{error.not-found}">Entity not found</h2>
-<h3 class="error" th:text="*{error}">Error placeholder</h3>
-
+Under Development
 </body>
 </html>
