--- a/Web Application/Wordle Spring/src/main/resources/templates/index.html
+++ b/Web Application/Wordle Spring/src/main/resources/templates/index.html
@@ -7,17 +7,21 @@
 </head>
 <body>
 <h1>Wordle</h1>
-<table class="index-table">
-    <th class="index-introduction">Wordle is simple: You have to guess the secret five-letter word.
+<div class="index-table">
+    <div><br></div>
+    <div><br></div>
+    <div class="index-introduction">Wordle is simple: You have to guess the secret five-letter word.
         <br>
         Type in a word as a guess, and the game tells you which letters are or aren't in the word.
         <br>
-        The aim is to figure out the secret word with the fewest guesses.</th>
-    <th>
+        The aim is to figure out the secret word with the fewest guesses.</div>
+    <div>
         <a class="index-english" href="/english">English!</a>
         <br>
         <a class="index-bulgarian" href="/bulgarian">Български!</a>
-    </th>
-</table>
+    </div>
+    <div><br></div>
+    <div><br></div>
+</div>
 </body>
 </html>
